chore: update the code block style

--- a/config.toml
+++ b/config.toml
@@ -72,9 +72,9 @@ weight = 1
       unsafe = true
   [markup.highlight]
     # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
-    style = "tango"
+    style = "doom-one"
     # Uncomment if you want your chosen highlight style used for code blocks without a specified language
-    # guessSyntax = "true"
+    guessSyntax = "true"
 
 # Everything below this are Site Params
 
